clients/atlas-tui/tests/snapshots/golden_predictors__armed__a_refused_lane_renders_at_120x36.snap
---
source: tests/golden_predictors.rs
expression: "client.frame(120, 36)"
---
" ACWI 152.47 ▼1.34%   SPY 729.46 ▼1.54%   QQQ 661.73 ▼2.04%   XLK 285.24 ▼2.08%   XLF 52.40 ▲1.24%   ACWI 152.47 ▼1.34% "
" 1 ATLAS│▌ PREDICTOR BOARD run                         as of 2026-08-20 · run abcd1234│▌ PULSE                          "
" 2 DESK │target realized_vol · horizon 21d · embargo 5d · 420 obs · 12 folds          │ desk stress  …                  "
" 3 MKTS │unknown model 'groupwise:angle_zz'; available: ('ridge:none', 'kernel:zz')   │ regime CALM  robust UNCERTAIN   "
" 4 BOOK │groupwise:angle_zz was admitted and beat its own selection null (p=0.04).    │ drawdown 0.0%  tier NONE        "
" 5 RSCH │                                                                             │ gross 100.0%                    "
"▌6 PRED │MODEL              LANE  MEAN IC    STD    Δ IC      t   W/N FOLDS           │                                 "
" 7 WORK │groupwise:angle_zz quant   0.061     --  +0.024  +2.40   9/2 ▇▅▁▆█▄▆▇ ★CHAMP │▌ BREADTH                        "
" 8 AUDIT│ridge:none         ctrl    0.037     --   0.000     -- --/-- --       BASE   │ ███████████████████████████████ "
" 9 SETT │kernel:linear      ctrl    0.037     --   0.000     -- --/-- --              │ adv 1 / dec 4                   "
" 0 VIS  │Δ IC vs ridge:none                                                           │                                 "
"        │groupwise:angle_zz ████████████████████████ +0.024                           │▌ MOVERS                         "
"        │ridge:none         ▏                        baseline                         │ ▲ best  XLF    +1.24%           "
"        │kern┌──────────────────────────────────────────────────────────────────┐     │ ▼ worst XLK    -2.08%           "
"        │    │▌ RUN A PREDICTOR LANE                                            │     │                                 "
"        │· ev│                                                                  │     │▌ REGIME                         "
"        │    │ ▸ groupwise:angle_zz                                             │     │ … waiting for the regime panel  "
"        │The │   kernel:linear                                                  │     │                                 "
"        │    │   ridge:none          always run — the control for the rest      │     │                                 "
"        │    │unknown model 'groupwise:angle_zz'; available: ('ridge:none', 'ke…│     │                                 "
"        │    └──────────────────────────────────────────────────────────────────┘     │                                 "
"        │                                                                             │                                 "
"        │                                                                             │                                 "
"        │                                                                             │▌ ATLAS READ                     "
"        │                                                                             │ state      STRESS               "
"        │                                                                             │ agreement  ALIGNED              "
"        │                                                                             │ conviction 84.0%                "
"        │                                                                             │ news       alpaca               "
"        │                                                                             │─────────────────────────────────"
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │                                                                             │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │─────────────────────────────────────────────────────────────────────────────│ WATCHING                        "
" /command …   http://127.0.0.1:8765                                   ● SSE  ● OWNER  SYNTHETIC  propose·auto  OPERATOR "
